syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.fossa";

import "common.proto";
import "google/protobuf/wrappers.proto";

message DeleteCommentByIdRequest {
    string id = 1;
}

message DeleteCommentByIdResponse {
    CommonStatus status = 1;
}

service CommentService {
    rpc DeleteCommentById(DeleteCommentByIdRequest) returns (DeleteCommentByIdResponse) {};
}